# aizynthfinder

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  aizynthfinder.analysis.html  aizynthfinder.chem.html  aizynthfinder.context.html  aizynthfinder.context.policy.html  aizynthfinder.context.scoring.html  aizynthfinder.context.stock.html  aizynthfinder.html  aizynthfinder.interfaces.gui.html  aizynthfinder.interfaces.html  aizynthfinder.search.breadth_first.html  aizynthfinder.search.dfpn.html  aizynthfinder.search.html  aizynthfinder.search.mcts.html  aizynthfinder.search.retrostar.html  aizynthfinder.tools.html  aizynthfinder.utils.html  cli.html  configuration.html  env-dev.yml  env-users.yml  environment.yml  genindex.html  gui.html  howto.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_interface.html  relationships.html  requirements.txt  requirements_dev.txt  scoring.html  (+7 more)
.codeboarding/: Application_Orchestrator.md  Chemical_Domain_Model.md  Configuration_Context_Management.md  Retrosynthetic_Search_Engines.md  Retrosynthetic_Strategy_Framework.md  Stock_Management.md  User_Interfaces.md  on_boarding.md
.github/workflows/: docs.yml  publish-to-test-pypi.yml  publish_to_pypi.yml  tests.yml
_sources/: aizynthfinder.analysis.rst.txt  aizynthfinder.chem.rst.txt  aizynthfinder.context.policy.rst.txt  aizynthfinder.context.rst.txt  aizynthfinder.context.scoring.rst.txt  aizynthfinder.context.stock.rst.txt  aizynthfinder.interfaces.gui.rst.txt  aizynthfinder.interfaces.rst.txt  aizynthfinder.rst.txt  aizynthfinder.search.breadth_first.rst.txt  aizynthfinder.search.dfpn.rst.txt  aizynthfinder.search.mcts.rst.txt  aizynthfinder.search.retrostar.rst.txt  aizynthfinder.search.rst.txt  aizynthfinder.tools.rst.txt  aizynthfinder.utils.rst.txt  gui.rst.txt  modules.rst.txt  python_interface.rst.txt  relationships.rst.txt  scoring.rst.txt
_static/: alabaster.css
aizynthfinder/: aizynthfinder.py  analysis.py  chem.py  reactiontree.py  scoring.py
aizynthfinder/analysis/: __init__.py  routes.py  tree_analysis.py  utils.py
aizynthfinder/chem/: __init__.py  mol.py  reaction.py  serialization.py
aizynthfinder/context/: collection.py  config.py  cost.py  policy.py  scoring.py  stock.py
aizynthfinder/context/cost/: __init__.py  collection.py  costs.py
aizynthfinder/context/policy/: __init__.py  expansion_strategies.py  filter_strategies.py  policies.py  utils.py
aizynthfinder/context/scoring/: __init__.py  collection.py  scorers.py  scorers_base.py  scorers_mols.py  scorers_reactions.py
aizynthfinder/context/stock/: __init__.py  queries.py  stock.py
aizynthfinder/data/: config.yml  default_training.yml  logging.yml
aizynthfinder/data/templates/: reaction_tree.dot  reaction_tree.thtml
aizynthfinder/interfaces/: __init__.py  aizynthapp.py  aizynthcli.py
aizynthfinder/interfaces/gui/: __init__.py  clustering.py  (+2 more)
aizynthfinder/mcts/: config.py  mcts.py  node.py  policy.py  state.py  stock.py
aizynthfinder/plugins/: README.md
aizynthfinder/search/: andor_trees.py
aizynthfinder/tools/: cat_output.py  download_public_data.py  make_stock.py
aizynthfinder/training/: keras_models.py  make_false_products.py  preprocess_expansion.py  preprocess_filter.py  preprocess_recommender.py  preprocess_rollout.py  training.py  utils.py
aizynthfinder/utils/: analysis_helpers.py  bonds.py  exceptions.py  files.py  image.py  keras_utils.py  loading.py  logging.py  math.py  models.py  mongo.py  paths.py  sc_score.py  serialization.py  type_utils.py
contrib/: notebook.ipynb
docs/: Makefile  cli.rst  conf.py  configuration.rst  howto.rst  index.rst  make.bat  python_interface.rst  scoring.rst  sequences.rst  stocks.rst  training.rst
docs/az/: lookup.rst
docs/source/: conf.py  configuration.rst  gui.rst  index.rst  python_interface.rst  relationships.rst  scoring.rst  sequences.rst  stocks.rst  training.rst
plugins/: expansion_strategies.py
tests/: conftest.py  test_analysis.py  test_chem.py  test_cli.py  test_clustering.py  test_collection.py  test_expander.py  test_external_tf_models.py  test_file_utils.py  test_finder.py  test_gui.py  test_image.py  test_integration.py  test_mcts_config.py  test_mol_cost.py  test_node.py  test_policy.py  test_reactiontree.py  test_route_distances.py  test_score.py  test_serialization.py  test_stock.py  test_training.py  test_tree.py  test_tree_search.py
tests/breadth_first/: test_nodes.py  test_search.py
tests/chem/: test_mol.py  test_reaction.py  test_serialization.py
tests/context/: conftest.py  test_expansion_strategies.py  test_mcts_config.py  test_mol_cost.py  test_policy.py  test_score.py  test_stock.py
tests/data/: and_or_tree.json  branched_route.json  combined_example_tree.json  combined_example_tree2.json  custom_loader.py  dummy.py  dummy2_raw_template_library.csv  dummy_noclass_raw_template_library.csv  dummy_raw_template_library.csv  dummy_sani_raw_template_library.csv  finder_output.json  finder_output_mol1.json  finder_output_mol2.json  linear_route.json  make_false2_template_library.csv  make_false_template_library.csv  post_processing_test.py  pre_processing_test.py  routes_for_clustering.json  sample_reaction.json  sample_reaction_with_hidden.json  smiles_csv.csv  smiles_plain.txt  stock1.csv  stock1.h5  stock1.txt  stock2.h5  templates.hdf5  test_reactions_template.csv  tree_for_clustering.json  tree_with_3_repetitions.json  tree_with_branching.json  tree_with_repetition.json  tree_without_repetition.json  tree_without_repetition_longer.json
tests/dfpn/: test_nodes.py  test_search.py
tests/mcts/: conftest.py  test_multiobjective.py  test_node.py  test_reward.py  test_serialization.py  test_tree.py
tests/retrostar/: conftest.py  test_retrostar.py  test_retrostar_cost.py  test_retrostar_nodes.py
tests/utils/: test_bonds.py  test_dynamic_loading.py  test_external_tf_models.py  test_file_utils.py  test_image.py  test_local_onnx_model.py  test_scscore.py
tutorials/: A_basic_usage.ipynb  B_route_analysis.ipynb  C_search_parameters.ipynb  README.md
(+24 files in other folders)
