[tool.poetry]
name = "aizynthfinder"
version = "4.4.0"
description = "Retrosynthetic route finding using neural network guided Monte-Carlo tree search"
authors = ["Molecular AI group <samuel.genheden@astrazeneca.com>"]
license = "MIT"
include = ["aizynthfinder/data/*.yml", "aizynthfinder/data/templates/*"]
readme = "README.md"
homepage = "https://github.com/MolecularAI/aizynthfinder/"
repository = "https://github.com/MolecularAI/aizynthfinder/"
documentation = "https://molecularai.github.io/aizynthfinder/"

[tool.pytest.ini_options]
mccabe-complexity = 9

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 8
max-attributes = 20
min-public-methods = 0
disable = "C0116, E0401, E1101, I1101, R0801, R0902, R0903, R0914, R1732, R1735, W0221, W0237, W0406, W0602, W0603, W0707, W1201, W1203, W1514, W3101"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipywidgets = "^7.5.1"
jinja2 = "^3.0.0"
jupyter = "^1.0.0"
jupytext = "^1.3.3"
notebook = "^6.5.3"
networkx = "^2.4"
deprecated = "^1.2.10"
pandas = ">=1.0.0,<3.0.0"
pillow = "^9.0.0"
requests = "^2.23.0"
rdchiral = "^1.0.0"
rdkit = "^2023.9.1"
tables = "^3.6.1"
tqdm = "^4.42.1"
onnxruntime = "<1.17.0"
tensorflow = {version = ">=2.8.0,<2.16.1", optional=true}  
grpcio = {version = "^1.24.0", optional=true}
tensorflow-serving-api = {version = "^2.1.0", optional=true}
pymongo = {version = "^3.10.1", optional=true}
route-distances = {version = "^1.2.4", optional=true}
scipy = {version = "^1.0", optional=true}
matplotlib = "^3.0.0"
timeout-decorator = {version = "^0.5.0", optional=true}
molbloom = {version = "^2.1.0", optional=true}
paretoset = "^1.2.3"
seaborn = "^0.13.2"
dask = ">=2024.4.1" 
numpy = "<2.0.0"
reaction-utils = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.0.0"
invoke = "^2.2.0"
pytest = "^6.2.2"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.5.0"
pytest-mccabe = "^2.0.0"
Sphinx = "^7.3.7"
mypy = "^1.0.0"
pylint = "^2.16.0"

[tool.poetry.extras]
all = ["pymongo", "route-distances", "scipy", "timeout-decorator", "molbloom"]
tf = ["tensorflow", "grpcio", "tensorflow-serving-api"]

[tool.poetry.scripts]
aizynthapp = "aizynthfinder.interfaces.aizynthapp:main"
aizynthcli = "aizynthfinder.interfaces.aizynthcli:main"
cat_aizynth_output = "aizynthfinder.tools.cat_output:main"
download_public_data = "aizynthfinder.tools.download_public_data:main"
smiles2stock = "aizynthfinder.tools.make_stock:main"

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
